Fix input width on mobile

--- a/source/stylesheets/partials/_opt_in_form.scss
+++ b/source/stylesheets/partials/_opt_in_form.scss
@@ -16,10 +16,10 @@
     flex: 1 0;
     padding: 12px 18px;
     border: 0;
-    // border-radius: 5px 0 0 5px;
     border-radius: 3px;
     background-color: rgba(255, 255, 255, 0.8);
     transition: background-color $base-duration $base-timing;
+    min-width: 0;
 
     &:active,
     &:focus {
